# DocuAI

./: .env.example  .gitignore  README.md  RELEASE_v0.3.0.md  pyproject.toml
docuai/: agent.py  cli.py  git_utils.py  models.py
docuai/parsers/: base.py  js_parser.py  python_parser.py
